# agile-octopus-telegram-notifications

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-rundown.yml  poll-commands.yml
notifiers/: telegram.py
scripts/: chat_state.py  check_env.py  poll_commands.py  rate_windows.py  setup_region.py  telegram_alerts.py
state/: state_telegram.json
tests/: test_chat_state.py  test_telegram.py
